--- a/src/pages/AddNewItem/AddItem.css
+++ b/src/pages/AddNewItem/AddItem.css
@@ -17,6 +17,7 @@
     border-radius: 7px;
     padding-left: 10px;
     outline: none;
+    box-shadow: 5px 5px 10px 1px rgba(184,184,255,0.5);
 }
 .form-submit-btn input{
     background: #B8B8FF;
